--- a/conditions.html
+++ b/conditions.html
@@ -29,18 +29,21 @@
 		<th></th>
 		<th>Distance</th>
 		<th>Power</th>
+		<th>Pressure</th>
 	</tr>
 	<tr>
 		<td style="padding-right: 1rem"><label><input type="radio"> L/s</label></td>
 		<td><label><input type="radio"> m^3/hr</label></td>
 		<td>m</td>
 		<td>kW</td>
+		<td>kPa</td>
 	</tr>
 	<tr>
 		<td><label><input type="radio"> gpm</label></td>
 		<td><label><input type="radio"> MGD</label></td>
 		<td>ft</td>
 		<td>hp</td>
+		<td>psig</td>
 	</tr>
 </table>
 <h1>Conditions</h1>
