--- a/conditions.html
+++ b/conditions.html
@@ -146,13 +146,19 @@
 			uNew = $('table :input').index(this);
 		$.each(Cond,function(i,d) {
 			if (uOld<=1 && uNew >=2) {
-				d.power_rating = rnd(d.power_rating / .745699872);
+				d.power_rating /= .745699872;
 			} else if (uOld>=2 && uNew<=1) {
-				d.power_rating = rnd(d.power_rating * .745699872);
+				d.power_rating *= .745699872;
 			}
 			const cvtFlow = [1,0.277778,.0630902,43.8126364];
 			d.flow *= cvtFlow[uOld];
 			d.flow /= cvtFlow[uNew];
+			if (uOld<=1 && uNew >=2) {
+				d.head /= .3048;
+			} else if (uOld>=2 && uNew<=1) {
+				d.head *= .3048;
+			}
+
 		});
 		saveProp('units',uNew);
 		saveCond();
