--- a/grid.html
+++ b/grid.html
@@ -203,13 +203,13 @@
       <td><div>Pump efficiency <em>(%)</em></div></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td><div>Motor rated power <em>(kW)</em></div></td><td class='result'><span></span></td>
+      <td><div>Motor rated power</div></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td><div>Motor shaft power <em>(kW)</em></div></td><td class='result'><span></span></td>
+      <td><div>Motor shaft power</div></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td><div>Pump shaft power <em>(kW)</em></div></td><td class='result'><span></span></td>
+      <td><div>Pump shaft power</div></td><td class='result'><span></span></td>
     </tr>
     <tr>
       <td><div>Motor efficiency <em>(%)</em></div></td><td class='result'><span></span></td>
@@ -360,12 +360,16 @@
     r.children().eq(i).html(Bridge.pumpEff($(v).val()));
   }
   function fldUnit(nm,txt) {
-    $(`[name=${nm}]`).parent().prev().children(0).append(`<em>(${txt})</em>`);;
+    $(`td>div:contains(${nm})`).append(`<em>(${txt})</em>`);;
   }
 
   units = loadProp('units');
-  fldUnit('power_rating', units <= 1 ? 'kW' : 'hp');
-  fldUnit('head', units <= 1 ? 'm' : 'ft');
-  fldUnit('flow', ['L/s', 'm^3/hr', 'gpm', 'MGD'][units]);
-  
+  fldUnit('Power Rating', units <= 1 ? 'kW' : 'hp');
+  fldUnit('Motor rated', units <= 1 ? 'kW' : 'hp');
+  fldUnit('Motor shaft', units <= 1 ? 'kW' : 'hp');
+  fldUnit('Pump shaft', units <= 1 ? 'kW' : 'hp');
+
+  fldUnit('Head', units <= 1 ? 'm' : 'ft');
+  fldUnit('Flow', ['L/s', 'm^3/hr', 'gpm', 'MGD'][units]);
+
 </script>
