--- a/grid.html
+++ b/grid.html
@@ -221,7 +221,7 @@
       <td><div>Motor current <em>(amps)</em></div></td><td class='result'><span></span></td>
     </tr>
     <tr>
-      <td><div>Motor power <em>(kW)</em></div></td><td class='result'><span></span></td>
+      <td><div>Motor power</div></td><td class='result'><span></span></td>
     </tr>
     <tr>
       <td><div>Annual energy <em>(MWh)</em></div></td><td class='result'><span></span></td>
@@ -360,14 +360,16 @@
     r.children().eq(i).html(Bridge.pumpEff($(v).val()));
   }
   function fldUnit(nm,txt) {
-    $(`td>div:contains(${nm})`).append(`<em>(${txt})</em>`);;
+    $(`td>div:contains(${nm})`).last().append(`<em>(${txt})</em>`);;
   }
 
   units = loadProp('units');
-  fldUnit('Power Rating', units <= 1 ? 'kW' : 'hp');
-  fldUnit('Motor rated', units <= 1 ? 'kW' : 'hp');
-  fldUnit('Motor shaft', units <= 1 ? 'kW' : 'hp');
-  fldUnit('Pump shaft', units <= 1 ? 'kW' : 'hp');
+  txt = units <= 1 ? 'kW' : 'hp';
+  fldUnit('Power Rating', txt);
+  fldUnit('Motor rated', txt);
+  fldUnit('Motor shaft', txt);
+  fldUnit('Pump shaft', txt);
+  fldUnit('Motor power', txt);
 
   fldUnit('Head', units <= 1 ? 'm' : 'ft');
   fldUnit('Flow', ['L/s', 'm^3/hr', 'gpm', 'MGD'][units]);
