--- a/conditions.html
+++ b/conditions.html
@@ -46,6 +46,30 @@
 		<td>psig</td>
 	</tr>
 </table>
+<!--<table style="text-align: left;">-->
+	<!--<tr>-->
+		<!--<td>Flow</td>-->
+		<!--<td><label><input type="radio"> L/s</label></td>-->
+		<!--<td><label><input type="radio"> m^3/hr</label></td>-->
+		<!--<td><label><input type="radio"> gpm</label></td>-->
+		<!--<td><label><input type="radio"> MGD</label></td>-->
+	<!--</tr>-->
+	<!--<tr>-->
+		<!--<td>Power</td>-->
+		<!--<td><label><input type="radio"> kW</label></td>-->
+		<!--<td><label><input type="radio"> hp</label></td>-->
+	<!--</tr>-->
+	<!--<tr>-->
+		<!--<td>Distance</td>-->
+		<!--<td><label><input type="radio"> m</label></td>-->
+		<!--<td><label><input type="radio"> ft</label></td>-->
+	<!--</tr>-->
+	<!--<tr>-->
+		<!--<td>Pressure</td>-->
+		<!--<td><label><input type="radio"> kPa</label></td>-->
+		<!--<td><label><input type="radio"> psig</label></td>-->
+	<!--</tr>-->
+<!--</table>-->
 <h1>Conditions</h1>
 <ul>
     <li>        	
