--- a/headtool.html
+++ b/headtool.html
@@ -27,9 +27,8 @@
 <table style='width: 100%'>
 	<tr>
 		<td>
-			Suction pipe diameter <em>(mm)</em><br>
-			<input id=Ds type=number/>
-			<button onclick=showUnit_mm(this)><i class="fa fa-calculator"/></button><br>
+			Suction pipe diameter<br>
+			<input id=Ds type=number/><br>
 			Suction gauge pressure <em>(kPa)</em><br>
 			<input id=Ps type=number/>
 			<button onclick=showUnit_kPa(this)><i class="fa fa-calculator"/></button><br>
@@ -41,9 +40,8 @@
 
 			<label><input type=checkbox> Suction tank</label><br>
 
-			Discharge pipe diameter <em>(mm)</em><br>
-			<input id=Dd type=number/>
-			<button onclick=showUnit_mm(this)><i class="fa fa-calculator"/></button><br>
+			Discharge pipe diameter<br>
+			<input id=Dd type=number/><br>
 			Discharge gauge pressure <em>(kPa)</em><br>
 			<input id=Pd type=number/>
 			<button onclick=showUnit_kPa(this)><i class="fa fa-calculator"/></button><br>
@@ -135,9 +133,11 @@
 		r('suction',sucHd);
 		r('discharge',disHd);
 		r('Pump',hd);
-
-
-			
 	}
+	units = loadProp('units');
+	txt = units <= 1 ? 'mm' : 'inches';
+	unitTxt = ` <em>(${txt})</em>`
+	$('#Ds').after(unitTxt);
+	$('#Dd').after(unitTxt);
 
 </script>
