--- a/grid.html
+++ b/grid.html
@@ -176,7 +176,7 @@
       <td><div>Head</div></td>
       <td>
         <input name='head' type="number">
-        <button onclick='backload("headtool")'><i class="fa fa-wrench"/></button>
+        <button onclick='gotoHead(this)'><i class="fa fa-wrench"/></button>
       </td>
     </tr>       
     <tr>
@@ -349,7 +349,13 @@
     $('#container').html(Grid);
 //  $('#container').append($('#container script').remove());
     delete Grid;
-  }      
+  }
+  function gotoHead(e) {
+    //alert($('[name=flow]').eq($(e).parent().index()-1).val());
+    alert($('[name=specific_gravity]').eq($(e).parent().index()-1).val());
+
+    //backload("headtool");
+  }
   function edit(e) {
     Idx = $(e).parent().data('idx');
     backload('notes');
