--- a/headtool.html
+++ b/headtool.html
@@ -105,7 +105,6 @@
 	function v(d,flow) {
 		return flow / (Math.PI*(d/2)*(d/2));
 	}
-
 	function vHd(v) {
 		return v*v/2/G;
 	}
@@ -113,24 +112,19 @@
 		$(`.results td:contains(${txt})`).next().text(rnd(v));
 	}
 	function calc() {
-		//let f = $(Grid).find('[name=head]');
-		//console.log(f);
-		alert(Flow);
-		let flow = Flow;
-		//const cvtFlow = [1,0.277778,.0630902,43.8126364];
 		const cvtFlow = [.001,3600,0.00222801,1.54722865];
-		let g = Units<=1 ? 9.8065 : 32.1740;
+		G = Units<=1 ? 9.8065 : 32.1740;
 
 		let flow = Flow*cvtFlow[Units],
 			elevHd = $('#Zd').val()-$('#Zs').val(),
-			presHd = ($('#Pd').val()-$('#Ps').val())/g/SG,
-			vHdS = vHd(v($('#Ds').val()/1000,flow)), 
+			presHd = ($('#Pd').val()-$('#Ps').val())/G/SG,
+			vHdS = vHd(v($('#Ds').val()/1000,flow)),
 			vHdD = vHd(v($('#Dd').val()/1000,flow)),
 			vHdDif = vHdD-vHdS,
 			sucHd = $('#Ks').val()*vHdS,
 			disHd = $('#Kd').val()*vHdD,
 			hd = elevHd + presHd + flow + vHdDif + sucHd + disHd;
-
+debugger;
 		r('elevation',elevHd);		
 		r('pressure',presHd);
 		r('velocity',vHdDif);
