--- a/headtool.html
+++ b/headtool.html
@@ -114,12 +114,13 @@
 	function calc() {
 		const cvtFlow = [.001,3600,0.00222801,1.54722865];
 		G = Units<=1 ? 9.8065 : 32.1740;
-
+		const presF = Units<=1 ? 0.1019977334 : 2.30665873688;
 		let flow = Flow*cvtFlow[Units],
 			elevHd = $('#Zd').val()-$('#Zs').val(),
-			presHd = ($('#Pd').val()-$('#Ps').val())/G/SG,
-			vHdS = vHd(v($('#Ds').val()/1000,flow)),
-			vHdD = vHd(v($('#Dd').val()/1000,flow)),
+			presHd = ($('#Pd').val()-$('#Ps').val())*presF/SG,
+			distF = Units<=1 ? 1000 : 12;
+			vHdS = vHd(v($('#Ds').val()/distF,flow)),
+			vHdD = vHd(v($('#Dd').val()/distF,flow)),
 			vHdDif = vHdD-vHdS,
 			sucHd = $('#Ks').val()*vHdS,
 			disHd = $('#Kd').val()*vHdD,
