--- a/headtool.html
+++ b/headtool.html
@@ -28,24 +28,31 @@
 	<tr>
 		<td>
 			Suction pipe diameter<br>
-			<input id=Ds type=number/><br>
-			Suction gauge pressure<br>
-			<input id=Ps type=number/><br>
-			Suction gauge elevation<br>
-			<input id=Zs type=number/><br>
+			<input id=Ds><br>
+
+			<label><input onclick='suction(this)' type=checkbox> Suction tank</label><br>
+			<div id="sucGauge">
+				Suction gauge pressure<br>
+				<input id=Ps><br>
+				Suction gauge elevation<br>
+				<input id=Zs><br>
+			</div>
+			<div id="sucTank" style="display: none">
+				Suction tank gas overpressure<br>
+				<input id=Pg><br>
+				Suction tank fluid surface elevation<br>
+				<input id=Zs><br>
+			</div>
 			Suction line loss coefficients<br>
-			<input id=Ks type=number/><br>
-
-			<label><input onclick='suction()' type=checkbox> Suction tank</label><br>
-
+			<input id=Ks><br>
 			Discharge pipe diameter<br>
-			<input id=Dd type=number/><br>
+			<input id=Dd><br>
 			Discharge gauge pressure<br>
-			<input id=Pd type=number/><br>
+			<input id=Pd><br>
 			Discharge gauge elevation<br>
-			<input id=Zd type=number/><br>
+			<input id=Zd><br>
 			Discharge line loss coefficients<br>
-			<input id=Kd type=number/><br>
+			<input id=Kd><br>
 			<!-- Fluid specific gravity<br>
 			<input name='specific_gravity' type=number/><br>
 			Flow rate <em>(L/s)</em><br>
@@ -95,7 +102,16 @@
 </table>
 			
 
-<script>	
+<script>
+	function suction(e) {
+		if (e.checked) {
+			$('#sucGauge').hide();
+			$('#sucTank').show();
+		} else {
+			$('#sucGauge').show();
+			$('#sucTank').hide();
+		}
+	}
 	function showUnit_mm(e) {
 		showUnitSgl(e,'inches',25.4);
 	}
