--- a/curve.html
+++ b/curve.html
@@ -4,7 +4,6 @@
 		background-color: black;
 	}
 </style>
-<button onclick='backToGrid()'><i class="fa fa-long-arrow-left"></i></button>
 <div>
 	<h1>System Head Curve</h1>
 	<form>
@@ -17,6 +16,8 @@
 </div>
 
 <script>
+	back = backToGrid;
+
 	Cnv = $('canvas')[0];
 	Ctx = Cnv.getContext('2d');
 	Ctx.strokeStyle = "green";
@@ -66,5 +67,7 @@
 		Ctx.lineTo(xPos(val[0]), yPos(val[1]));
 	}
     Ctx.stroke();
+
+
 </script>
 
