--- a/notes.html
+++ b/notes.html
@@ -14,8 +14,6 @@
 }
 </style>
 
-
-<button onclick='prev()'><i class="fa fa-long-arrow-left"/></button>
 <h1>Notes</h1>
 <form>
 	Name<br>
@@ -62,6 +60,6 @@
 		saveCond();
 		prev();
 	}
-	
+	back = prev;
 </script>
 
