--- a/grid.html
+++ b/grid.html
@@ -50,6 +50,9 @@
     justify-content: space-between;
     align-items: center;
   }
+  td>div>em {
+    color: green;
+  }
 </style>
 <table>
   <thead>
