--- a/grid.html
+++ b/grid.html
@@ -304,10 +304,12 @@
   function col(e) {
     return $(`td:nth-child(${$(e).parent().index()+1})`);
   }
-
+  function colFlds(e,t) {
+    return col(e).find(`[name${t ? ('='+t) : ''}]`);
+  }
   function colData(e) {
     let v,d={};
-    col(e).find('[name]').each(function(i,el) {
+    colFlds(e).each(function(i,el) {
       if ($(el).is(':checkbox')) {
         v = el.checked;
       } else if ($(el).is('input')) {
@@ -327,7 +329,7 @@
           break;
         case 2:
           let v,d = loadProp('defaultCondition');
-          col(e).find('[name]').each(function(i,el) {
+          colFlds(e).each(function(i,el) {
             v = d[$(el).attr('name')];
             if ($(el).is(':checkbox')) {
               el.checked = v;
@@ -359,13 +361,10 @@
     delete Grid;
     back = main;
   }
-  function getColFld(nm,e) {
-    return $(`[name=${nm}]`).eq($(e).parent().index()-1);
-  }
   function gotoHead(e) {
-    Flow = getColFld('flow',e).val();
-    SG = getColFld('specific_gravity',e).val();
-    HeadEl = getColFld('head',e);
+    Flow = colFlds(e,'flow').val();
+    SG = colFlds(e,'specific_gravity',e).val();
+    HeadEl = colFlds(e,'head');
     backload("headtool");
   }
   function edit(e) {
